--- a/css/media.css
+++ b/css/media.css
@@ -73,6 +73,7 @@
         z-index: 50; 
         overflow: auto;
         padding-top: 120px;
+        overflow: auto;
     }
     .hamb-popup.open{
         right: 0;
